AC_INIT([libxjr], [0.1], [libxjr@codechild.com])
: ${CFLAGS=""}
AC_CONFIG_AUX_DIR([build-aux])
AC_ENABLE_STATIC
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
AC_PROG_CXX([g++])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile libxjr.pc])
LT_INIT
AC_CONFIG_MACRO_DIRS([m4])
PKG_PROG_PKG_CONFIG
PKG_INSTALLDIR
AC_OUTPUT


